--- a/NSAPrivacyViolator/Info.plist
+++ b/NSAPrivacyViolator/Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>so we can see you</string>
 </dict>
 </plist>
